# showtime

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
migrations/: 0001_init.sql
src/: db.rs  handlers.rs  main.rs  models.rs  status.rs  tmdb.rs
static/: add.html  app.js  index.html  settings.html  show.html  style.css
